<resources>
    <string name="app_name">KotlinLab</string>
    <string name="login_in">Login in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up</string>
    <string name="new_account">New account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register</string>
    <string name="user_main">User Main</string>
    <string name="example_example_com">example@example.com</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="del_item">Delete city</string>
    <string name="city_title">City Title</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="city_info">City Info</string>
    <string name="city_name">City Name</string>
    <string name="year_of_foundation">Year of foundation: </string>
    <string name="year_example">2024</string>
    <string name="country">Country:</string>
    <string name="city_example">Minsk</string>
    <string name="example_description">The description of the book.</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="favorite_color">Favorite color</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="save_changes">Save changes</string>
    <string name="male">Male</string>
    <string name="favorite_food">Favorite food</string>
    <string name="favorite_city">Favorite city</string>
    <string name="favorite_country">Favorite country</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="all_cities">All cities</string>
    <string name="my_favorites">My favorites</string>
</resources>