<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".CityActivity">

    <RelativeLayout
        android:id="@+id/toolbarRl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/cityNameTv"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/city_name"
            android:textSize="28sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/toolbarRl"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:id="@+id/countryLabelTv"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:layout_marginEnd="5dp"
                        android:textStyle="italic"/>
                    <TextView
                        android:id="@+id/countryTv"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_example"
                        android:layout_marginEnd="5dp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:id="@+id/yearOfFoundationLabelTv"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year_of_foundation"
                        android:layout_marginEnd="5dp"                        android:textSize="14sp"
                        android:textStyle="italic"/>
                    <TextView
                        android:id="@+id/yearOfFoundationTv"
                        android:textColor="@color/black"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year_example"
                        android:layout_marginEnd="5dp"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/descriptionTv"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/example_description"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/imagesViewer"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/addToFavoritesBtn"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_to_favorites"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
